integ-tests/tests/snapshots/parser__bad_table_names__empty.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[wanted]: 
  ┌─ empty:1:2
  │
1 │ []
  │  ^^ expected a table key


