integ-tests/tests/snapshots/parser__bad_table_names__exclamation.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[unexpected]: 
  ┌─ exclamation:1:2
  │
1 │ [!]
  │  ^ unexpected character '!'


