integ-tests/tests/snapshots/parser__bad_table_names__multi_bar.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[multiline-string-key]: 
  ┌─ multi_bar:1:2
  │
1 │ ["""bar"""]
  │  ^^^ multiline keys are not allowed


