integ-tests/tests/snapshots/parser__bad_table_names__multi_foo.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[multiline-string-key]: 
  ┌─ multi_foo:1:2
  │
1 │ ['''foo''']
  │  ^^^ multiline keys are not allowed


