integ-tests/tests/snapshots/parser__bad_table_names__unterminated_three.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[unterminated-string]: 
  ┌─ unterminated_three:1:2
  │
1 │ [''']
  │  ^ eof reached before string terminator


